Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
  # Simple Bank Database
  '''
}
// Creating tables

Table users as U {
  id uuid [pk]
  username varchar [unique, not null]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  created_at timestamptz [not null, default: `now()`]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Table accounts as A {
  id uuid [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id uuid [pk]
  account_id uuid [ref: > A.id, not null]
  amount bigint [not null, note: 'Can be negative or positive']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    account_id
  }
}

Table transfers {
  id uuid [pk]
  from_account_id uuid [ref: > A.id, not null]
  to_account_id uuid [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [default: `now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}


Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar
  user_agent varchar
  client_ip varchar
  is_blocked boolean
  expires_at timestamptz
  created_at timestamptz [default: `now()`]


  Indexes {
    username
  }
}
